證券交易法 2005.12.20

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -2,17 +2,17 @@
 
 * 2 有價證券之募集、發行、買賣，其管理、監督依本法之規定，本法未規定者，適用公司法及其他有關法律之規定。
 
-* 3 本法所稱主管機關，為財政部證券暨期貨管理委員會。
+* 3 本法所稱主管機關，為行政院金融監督管理委員會。
 
-> 釋：鑑於財政部證券暨期貨管理委員會組織條例之更名，及參照期貨交易法第四條關於主管機關之規定，將證券交易主管機關更為財政部證券暨期貨管理委員會，以求一致。
+> 釋：配合行政院金融監督管理委員會於九十三年七月一日成立，業依行政院金融監督管理委員會組織法第二條、第四條及行政程序法第十一條第二項將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，爰修正本條文。
 
 * 4 本法所稱公司，謂依公司法組織之股份有限公司。
 
 * 5 本法所稱發行人，謂募集及發行有價證券之公司，或募集有價證券之發起人。
 
-* 6 本法所稱有價證券，謂政府債券、公司股票、公司債券及經財政部核定之其他有價證券。新股認購權利證書、新股權利證書及前項各種有價證券之價款繳納憑證，或表明其權利之證書，視為有價證券。前二項規定之有價證券，未印製表示其權利之實體有價證券者，亦視為有價證券。
+* 6 本法所稱有價證券，指政府債券、公司股票、公司債券及經主管機關核定之其他有價證券。新股認購權利證書、新股權利證書及前項各種有價證券之價款繳納憑證或表明其權利之證書，視為有價證券。前二項規定之有價證券，未印製表示其權利之實體有價證券者，亦視為有價證券。
 
-> 釋：一、配合主管機關改隸，爰修正第一項。二、為配合有價證券無實體發行制度之建立，及為避免無實體發行以帳簿劃撥登錄，因未印製實體有價證券，是否屬有價證券之爭議，爰將有價證券無實體發行以帳簿劃撥登錄，未印製實體有價證券者，亦規定視為有價證券，以杜爭議，爰增訂第三項。
+> 釋：配合行政院金融監督管理委員會於九十三年七月一日成立，業依行政院金融監督管理委員會組織法第二條、第四條及行政程序法第十一條第二項將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，並酌作文字修正。
 
 * 7 本法所稱募集，謂發起人於公司成立前或發行公司於發行前，對非特定人公開招募有價證券之行為。本法所稱私募，謂已依本法發行股票之公司依第四十三條之六第一項及第二項規定，對特定人招募有價證券之行為。
 
@@ -34,11 +34,29 @@
 
 * 13 本法所稱公開說明書，謂發行人為有價證券之募集或出賣，依本法之規定，向公眾提出之說明文書。
 
-* 14 本法所稱財務報告，謂發行人及證券商、證券交易所依照法令規定，應定期編送主管機關之財務報告。前項財務報告之編製準則，由主管機關以命令定之。
+* 14 本法所稱財務報告，指發行人及證券商、證券交易所依法令規定，應定期編送主管機關之財務報告。前項財務報告之內容、適用範圍、作業程序、編製及其他應遵行事項之準則，由主管機關定之。第一項財務報告應經董事長、經理人及會計主管簽名或蓋章，並出具財務報告內容無虛偽或隱匿之聲明。前項會計主管應具備一定之資格條件，並於任職期間內持續專業進修；其資格條件、持續專業進修之最低進修時數及辦理進修機構應具備條件等事項之辦法，由主管機關定之。
+
+> 釋：一、第一項文字修正。二、為符合法律授權明確性，於第二項就授權主管機關訂定之財務報告編製準則其內容及範圍予以更明確規定；另酌作文字修正，刪除「以命令」等文字。三、為明確規範虛偽隱匿財務報告內容之相關人員責任範圍，除公司之董事長、經理人及會計主管應於財務報告上簽名或蓋章外，並參酌美國沙氏法案之規定，規範前揭人員應出具財務報告內容無虛偽或隱匿之聲明，爰增訂第三項；未依規定辦理者，依第一百七十八條第一項第二款規定處罰。四、另考量會計主管之能力及操守攸關財務報告之品質與可靠性，故該等人員除應具備良好道德及行為操守外，亦應於任職期間持續專業進修以增進其專業能力，爰增訂第四項，授權主管機關訂定會計主管之資格條件及持續專業進修等應辦理事項之辦法。
 
 * 14.1 公開發行公司、證券交易所、證券商及第十八條所定之事業應建立財務、業務之內部控制制度。主管機關得訂定前項公司或事業內部控制制度之準則。第一項之公司或事業，除經主管機關核准者外，應於每會計年度終了後四個月內，向主管機關申報內部控制聲明書。
 
 > 釋：一、本條新增。二、配合行政程序法之施行，將現行「公開發行公司建立內部控制制度實施要點」、「證券暨期貨市場各服務事業建立內部控制制度實施要點」之規定，提昇至法律位階。三、前開要點規定內容涉及人民權利義務，依行政程序法之規定，其訂定應有法律之依據，爰增列訂定上開要點等之授權依據。
+
+* 14.2 已依本法發行股票之公司，得依章程規定設置獨立董事。但主管機關應視公司規模、股東結構、業務性質及其他必要情況，要求其設置獨立董事，人數不得少於二人，且不得少於董事席次五分之一。獨立董事應具備專業知識，其持股及兼職應予限制，且於執行業務範圍內應保持獨立性，不得與公司有直接或間接之利害關係。獨立董事之專業資格、持股與兼職限制、獨立性之認定、提名方式及其他應遵行事項之辦法，由主管機關定之。有下列情事之一者，不得充任獨立董事，其已充任者，當然解任：一、有公司法第三十條各款情事之一。二、依公司法第二十七條規定以政府、法人或其代表人當選。三、違反依前項所定獨立董事之資格。獨立董事持股轉讓，不適用公司法第一百九十七條第一項後段及第三項規定。獨立董事因故解任，致人數不足第一項或章程規定者，應於最近一次股東會補選之。獨立董事均解任時，公司應自事實發生之日起六十日內，召開股東臨時會補選之。
+
+> 釋：一、本條新增。二、公開發行公司除經主管機關核准外，應設置獨立董事之持股偏低，甚至得免持有公司股票，為避免因小額持股轉讓而有公司法第一百九十七條第一項及第三項規定之情事，爰排除公司法有關持股轉讓超過二分之一應解任規定之適用。
+
+* 14.3 已依前條第一項規定選任獨立董事之公司，除經主管機關核准者外，下列事項應提董事會決議通過；獨立董事如有反對意見或保留意見，應於董事會議事錄載明：一、依第十四條之一規定訂定或修正內部控制制度。二、依第三十六條之一規定訂定或修正取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證之重大財務業務行為之處理程序。三、涉及董事或監察人自身利害關係之事項。四、重大之資產或衍生性商品交易。五、重大之資金貸與、背書或提供保證。六、募集、發行或私募具有股權性質之有價證券。七、簽證會計師之委任、解任或報酬。八、財務、會計或內部稽核主管之任免。九、其他經主管機關規定之重大事項。
+
+> 釋：一、本條新增。二、為強化董事會之職能，對於公司財務業務有重大影響之事項應提董事會決議，並規定獨立董事如有反對或保留意見者，應於董事會議事錄載明。
+
+* 14.4 已依本法發行股票之公司，應擇一設置審計委員會或監察人。但主管機關得視公司規模、業務性質及其他必要情況，命令設置審計委員會替代監察人；其辦法，由主管機關定之。審計委員會應由全體獨立董事組成，其人數不得少於三人，其中一人為召集人，且至少一人應具備會計或財務專長。公司設置審計委員會者，本法、公司法及其他法律對於監察人之規定，於審計委員會準用之。公司法第二百條、第二百十三條至第二百十五條、第二百十六條第一項、第三項、第四項、第二百十八條第一項、第二項、第二百十八條之一、第二百十八條之二第二項、第二百二十條、第二百二十三條至第二百二十六條、第二百二十七條但書及第二百四十五條第二項規定，對審計委員會之獨立董事成員準用之。審計委員會及其獨立董事成員對前二項所定職權之行使及相關事項之辦法，由主管機關定之。審計委員會之決議，應有審計委員會全體成員二分之一以上之同意。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
+
+* 14.5 已依本法發行股票之公司設置審計委員會者，下列事項應經審計委員會全體成員二分之一以上同意，並提董事會決議，不適用第十四條之三規定：一、依第十四條之一規定訂定或修正內部控制制度。二、內部控制制度有效性之考核。三、依第三十六條之一規定訂定或修正取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證之重大財務業務行為之處理程序。四、涉及董事自身利害關係之事項。五、重大之資產或衍生性商品交易。六、重大之資金貸與、背書或提供保證。七、募集、發行或私募具有股權性質之有價證券。八、簽證會計師之委任、解任或報酬。九、財務、會計或內部稽核主管之任免。十、年度財務報告及半年度財務報告。十一、其他公司或主管機關規定之重大事項。前項各款事項除第十款外，如未經審計委員會全體成員二分之一以上同意者，得由全體董事三分之二以上同意行之，不受前項規定之限制，並應於董事會議事錄載明審計委員會之決議。公司設置審計委員會者，不適用第三十六條第一項財務報告應經監察人承認之規定。第一項及前條第六項所稱審計委員會全體成員及第二項所稱全體董事，以實際在任者計算之。
+
+> 釋：一、本條新增。二、增訂審計委員會之職權範圍及行使方式。
 
 * 15 依本法經營之證券業務，其種類如左：一、有價證券之承銷及其他經主管機關核准之相關業務。二、有價證券之自行買賣及其他經主管機關核准之相關業務。三、有價證券買賣之行紀、居間、代理及其他經主管機關核准之相關業務。
 
@@ -46,37 +64,45 @@
 
 * 16 經營前條各款業務之一者為證券商，並依左列各款定其種類：一、經營前條第一款規定之業務者，為證券承銷商。二、經營前條第二款規定之業務者，為證券自營商。三、經營前條第三款規定之業務者，為證券經紀商。
 
-* 17 公司依本法公開募集及發行有價證券時，應先向主管機關申請核准或申報生效。公司須由具有特定資格之股東所組成，或其事業之範圍或性質不適宜由公眾投資者，得經財政部之核定，不適用本法及公司法關於公開發行之規定。
+* 17 （刪除）
 
-> 釋：一、修正條文第二十二條第一項對於有價證券之募集及發行，已修正兼採審核與申報生效制度，並授權主管機關訂定其處理準則，爰於第一項末句增列「或申報生效」，以資配合。二、第二項未修正。
+> 釋：一、本條刪除。二、第一項於同法第二十二條第一項已有規定，無重複規定之必要，爰予刪除。三、公司法第一百五十六條第四項已刪除公司資本額達一定數額者，其股票應公開發行之規定，第二項爰配合刪除。
 
-* 18 經營證券投資信託事業、證券金融事業、證券投資顧問事業、證券集中保管事業或其他證券服務事業，應經主管機關之核准。前項事業之管理、監督事項，由行政院以命令定之。
+* 18 經營證券金融事業、證券集中保管事業或其他證券服務事業，應經主管機關之核准。前項事業之設立條件、申請核准之程序、財務、業務與管理及其他應遵行事項之規則，由主管機關定之。
 
-> 釋：為增加證券交易之安全及加強投資服務，暨參照美、日等國證券市場已個別設置有清算、資訊、店頭市場相互公司等證券服務事業，爰於本條前段增列「證券集中保管事業或其他證券服務事業」等文字，列為第一項，俾設置專責之集中保管事業，辦理證券集中保管及劃撥業務，以及配合市場之發展，於需要時，得設置其他證券服務事業。
+> 釋：一、配合證券投資信託及顧問法業於九十三年十一月一日施行，依據該法第一百二十一條規定，自施行之日起，證券交易法第十八條所定證券投資信託事業及證券投資顧問事業之規定，及第十八條之二與第十八條之三規定，不再適用，爰修正第一項規定。二、為符合法律授權明確原則。修正第二項，明定對證券金融事業、證券集中保管事業或其他證券服務事業。其設立條件、申請程序及其財務、業務與其他應遵行事項之管理規則，由主管機關定之。
 
 * 18.1 第三十八條、第三十九條及第六十六條之規定，於前條之事業準用之。第五十三條、第五十四條及第五十六條之規定，於前條事業之人員準用之。
 
 > 釋：一、第一項不修正。二、第二項新增。本條現行所列準用條文，僅限於對事業本身之管理，而對事業所屬相當於第五十三條、第五十四條及第五十六條所定人員，其資格條件與管理尚付闕如，爰增訂第二項，明定第五十三條、第五十四條及第五十六條之規定，於前條事業之人員準用之。
 
-* 18.2 證券投資信託事業募集之證券投資信託基金，與證券投資信託事業及基金保管機構之自有財產，應分別獨立。證券投資信託事業及基金保管機構就其自有財產所負債務，其債權人不得對於基金資產為任何之請求或行使其他權利。證券投資信託基金管理辦法，由財政部定之。
+* 18.2 （刪除）
 
-> 釋：基金是獨立於公司的資產之外，所以公司的債權人應不得對基金請求扣押或主張任何權益。爰修正第一項為：「．．．．．．其債權人不得對基金資產為任何之請求或行使其他權益。」
+> 釋：一、本條刪除。二、配合證券投資信託及顧問法業於九十三年十一月一日施行，依據該法第一百二十一條規定，自施行之日起，證券交易法第十八條所定證券投資信託事業及證券投資顧問事業之規定，及第十八條之二與第十八條之三規定，不再適用，爰予刪除之。
 
-* 18.3 證券投資顧問事業或證券投資信託事業接受客戶全權委託投資之資金，與證券投資顧問事業或證券投資信託事業及保管機構之自有財產，應分別獨立。證券投資顧問事業或證券投資信託事業及保管機構對其自有財產所負債務，其債權人不得對客戶委託之資金及以該資金購入之資產，為任何之請求或行使其他權利。證券投資顧問事業或證券投資信託事業經營接受客戶全權委託投資業務之管理辦法及其營業保證金，由財政部定之。
+* 18.3 （刪除）
 
-> 釋：一、本條新增。二、規定證券投資顧問事業或證券投資信託事業接受客戶全權委託投資之資金具有獨立性，以保障該資金安全。三、授權訂定經營接受客戶全權委託投資業務之管理辦法，以確保該業務之正常運作。
+> 釋：一、本條刪除。二、配合證券投資信託及顧問法業於九十三年十一月一日施行，依據該法第一百二十一條規定，自施行之日起，證券交易法第十八條所定證券投資信託事業及證券投資顧問事業之規定，及第十八條之二與第十八條之三規定，不再適用，爰予刪除之。
 
 * 19 凡依本法所訂立之契約，均應以書面為之。
 
-* 20 有價證券之募集、發行、私募或買賣，不得有虛偽、詐欺或其他足致他人誤信之行為。發行人申報或公告之財務報告及其他有關業務文件，其內容不得有虛偽或隱匿之情事。違反前二項規定者，對於該有價證券之善意取得人或出賣人因而所受之損害，應負賠償之責。委託證券經紀商以行紀名義買入或賣出之人，視為前項之取得人或出賣人。
+* 20 有價證券之募集、發行、私募或買賣，不得有虛偽、詐欺或其他足致他人誤信之行為。發行人依本法規定申報或公告之財務報告及財務業務文件，其內容不得有虛偽或隱匿之情事。違反第一項規定者，對於該有價證券之善意取得人或出賣人因而所受之損害，應負賠償責任。委託證券經紀商以行紀名義買入或賣出之人，視為前項之取得人或出賣人。
 
-> 釋：有價證券之私募及再行賣出仍不得為虛偽隱匿不實之情事，爰修正第一項；違反者適用第一百七十一條之罰則。至於私募涉有背信情事，依刑法第三百四十二條之規定處罰。
+> 釋：一、第一項未修正。二、基於實務上對於「其他有關業務文件」之定義有所疑義，為明確其範圍，爰就第二項文字酌作修正。三、財務報告及有關財務業務文件內容有虛偽、隱匿情事，相關人員所應負擔之賠償責任有其特殊性，且與第一項所規範之行為主體不同，爰修正第三項，將有關財務報告或財務業務文件不實所應負擔之民事賠償責任規定移列至第二十條之一另予規範。四、第四項未修正。
+
+* 20.1 前條第二項之財務報告及財務業務文件或依第三十六條第一項公告申報之財務報告，其主要內容有虛偽或隱匿之情事，下列各款之人，對於發行人所發行有價證券之善意取得人、出賣人或持有人因而所受之損害，應負賠償責任：一、發行人及其負責人。二、發行人之職員，曾在財務報告或財務業務文件上簽名或蓋章者。前項各款之人，除發行人、發行人之董事長、總經理外，如能證明已盡相當注意，且有正當理由可合理確信其內容無虛偽或隱匿之情事者，免負賠償責任。會計師辦理第一項財務報告或財務業務文件之簽證，有不正當行為或違反或廢弛其業務上應盡之義務，致第一項之損害發生者，負賠償責任。前項會計師之賠償責任，有價證券之善意取得人、出賣人或持有人得聲請法院調閱會計師工作底稿並請求閱覽或抄錄，會計師及會計師事務所不得拒絕。第一項各款及第三項之人，除發行人、發行人之董事長、總經理外，因其過失致第一項損害之發生者，應依其責任比例，負賠償責任。前條第四項規定，於第一項準用之。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
 
 * 21 本法規定之損害賠償請求權，自有請求權人知有得受賠償之原因時起二年間不行使而消滅；自募集、發行或買賣之日起逾五年者亦同。
 
-* 22 有價證券之募集與發行，除政府債券或經財政部核定之其他有價證券外，非經主管機關核准或向主管機關申報生效後，不得為之；其處理準則，由主管機關定之。已依本法發行股票之公司，於依公司法之規定發行新股時，除依第四十三條之六第一項及第二項規定辦理者外，仍應依前項之規定辦理。第一項規定於出售所持有之公司股票、公司債券或其價款繳納憑證、表明其權利之證書或新股認購權利證書、新股權利證書，而對非特定人公開招募者，準用之。
+* 21.1 為促進我國與其他國家證券市場主管機關之國際合作，政府或其授權之機構依互惠原則，得與外國政府、機構或國際組織，就資訊交換、技術合作、協助調查等事項，簽訂合作條約或協定。除有妨害國家利益或投資大眾權益者外，主管機關依前項簽訂之條約或協定，得洽請相關機關、機構依法提供必要資訊，並基於互惠及保密原則，提供予與我國簽訂條約或協定之外國政府、機構或國際組織。
 
-> 釋：為立我國私募制度，修正第二項，對於符合第四十三條之六第一項及第二項之規定辦理者，排除私募之有價證券須報經主管機關申請核准或申報生效之規定。
+> 釋：一、本條新增。二、為促進我國與其他國家證券市場主管機關之國際合作，並參考組織犯罪防制條例第十五條規定之立法例，於第一項明定，政府或其授權之機構得與外國政府、機構或國際組織，就資訊交換、技術合作、協助調查等事項，簽訂合作條約或協定。三、簽訂合作條約或協定之主要目的在於與外國主管機關加強合作，共同遏止、打擊跨國不法行為，以維護本國證券市場之交易秩序與安全，故於第二項明定，除有妨害國家利益或投資大眾權益，主管機關依前項簽訂之合作條約或協定，得洽請相關機關或機構依法提供必要資訊，並基於互惠及保密原則，提供予與我國簽訂合作條約或協定之外國政府、機構或國際組織。
+
+* 22 有價證券之募集及發行，除政府債券或經主管機關核定之其他有價證券外，非向主管機關申報生效後，不得為之。已依本法發行股票之公司，於依公司法之規定發行新股時，除依第四十三條之六第一項及第二項規定辦理者外，仍應依前項規定辦理。第一項規定，於出售所持有之公司股票、公司債券或其價款繳納憑證、表明其權利之證書或新股認購權利證書、新股權利證書，而公開招募者，準用之。依前三項規定申報生效應具備之條件、應檢附之書件、審核程序及其他應遵行事項之準則，由主管機關定之。前項準則有關外匯事項之規定，主管機關於訂定或修正時，應洽商中央銀行同意。
+
+> 釋：一、配合行政院金融監督管理委員會於九十三年七月一日成立，爰將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，並酌作文字修正。二、第二項酌作文字修正。三、配合本法第七條對募集與私募已有定義，非特定人屬募集之範疇，爰刪除第三項「對非特定人」之贅詞。四、為符合法律授權明確性，就授權主管機關訂定處理準則之內容及範圍，參考「證券投資信託及顧問法」第十條規定修正，且因前三項均屬處理準則規範範圍，爰增訂第四項。五、主管機關依第四項訂定、修正相關處理準則，為配合外匯管理之需要，應洽商中央銀行同意，爰增訂第五項規定。
 
 * 22.1 已依本法發行股票之公司，於增資發行新股時，主管機關得規定其股權分散標準。公開發行股票公司股務處理準則，由主管機關定之。
 
@@ -94,9 +120,9 @@
 
 > 釋：為呼應取消公司法票面金額之規定，爰刪除證交法有關票面金額之文字規定。
 
-* 25.1 公開發行股票公司出席股東會使用委託書應予限制、取締或管理；其規則由主管機關定之。使用委託書違反前項所定規則者，其代理之表決權不予計算。
+* 25.1 公開發行股票公司出席股東會使用委託書，應予限制、取締或管理；其徵求人、受託代理人與代為處理徵求事務者之資格條件、委託書之格式、取得、徵求與受託方式、代理之股數、統計驗證、使用委託書代理表決權不予計算之情事、應申報與備置之文件、資料提供及其他應遵行事項之規則，由主管機關定之。
 
-> 釋：一、本條新增。二、授權主管機關訂定公開發行公司出席股東會使用委託書管理規則，就委託代理加以限制及管理，以防少數股東借徵求委託書而操縱股東會，爰增訂本條以為法律依據。
+> 釋：一、為符合法律授權明確性及依法行政原則，爰於第一項增訂主管機關訂定公開發行股票公司出席股東會使用委託書規則之相關內容。二、有關使用委託書代理表決權不予計算之事項已於第一項授權由主管機關定之，爰刪除第二項規定。
 
 * 26 凡依本法公開募集及發行有價證券之公司，其全體董事及監察人二者所持有記名股票之股份總額，各不得少於公司已發行股份總額一定之成數。前項董事、監察人股權成數及查核實施規則，由主管機關以命令定之。
 
@@ -110,13 +136,17 @@
 
 > 釋：一、本條新增。二、目前各公開發行公司之股票，已依主管機關所訂定「公開發行股票統一規格要點」換發統一規格股票，每股金額並均為新臺幣壹拾元。復依本法第一百三十八條授權，證券交易所對於上市股票之買賣，係以每股金額十元一千股為一成交單位或其倍數，不足一成交單位者為零股交易。股票公開發行公司因歷年不斷增資配股，致使持有零股股東人數眾多，幾達各該公司股東總人數百分之四十以上，但其總持股數僅為各該公司發行股數百分之一以下，所占比例甚微。實務上公司必須將開會通知書以掛號寄發各股東（便於取證），對於已成為大眾化之股票發行公司造成人力、物力一大負荷，迭經各股票發行公司反應，爰增訂本條。
 
+* 26.3 已依本法發行股票之公司董事會，設置董事不得少於五人。政府或法人為公開發行公司之股東時，除經主管機關核准者外，不得由其代表人同時當選或擔任公司之董事及監察人，不適用公司法第二十七條第二項規定。公司除經主管機關核准者外，董事間應有超過半數之席次，不得具有下列關係之一：一、配偶。二、二親等以內之親屬。公司除經主管機關核准者外，監察人間或監察人與董事間，應至少一席以上，不得具有前項各款關係之一。公司召開股東會選任董事及監察人，原當選人不符前二項規定時，應依下列規定決定當選之董事或監察人：一、董事間不符規定者，不符規定之董事中所得選票代表選舉權較低者，其當選失其效力。二、監察人間不符規定者，準用前款規定。三、監察人與董事間不符規定者，不符規定之監察人中所得選票代表選舉權較低者，其當選失其效力。已充任董事或監察人違反第三項或第四項規定者，準用前項規定當然解任。董事因故解任，致不足五人者，公司應於最近一次股東會補選之。但董事缺額達章程所定席次三分之一者，公司應自事實發生之日起六十日內，召開股東臨時會補選之。公司應訂定董事會議事規範；其主要議事內容、作業程序、議事錄應載明事項、公告及其他應遵行事項之辦法，由主管機關定之。
+
+> 釋：一、本條新增。二、為提升董事會、監察人之獨立性，明定董事會之最低席次及補選規定，且規定董事、監察人間應超過一定比例或人數，彼此間不得具有親屬等關係，並明定公司應訂定董事會議事規範。
+
 * 27 主管機關對於公開發行之股票，得規定其每股之最低或最高金額。但規定前已准發行者，得仍照原金額；其增資發行之新股，亦同。公司更改其每股發行價格，應向主管機關申報。
 
 > 釋：第二項「每股金額，每年度以一次為限。」修改為「每股發行價格，應向主管機關申報。」
 
-* 28 公司經營之事業，以由公眾投資為適當者，得由財政部事先以命令規定發起人認足股份數額之一定限度。其在限度以外之股份，應先行公開招募；招募不足時，由發起人認足之，並得規定一定小額認股者之優先認股權。公司成立後發行新股時，準用前項之規定。但以公積或其他準備轉作資本者，不在此限。
+* 28 （刪除）
 
-> 釋：一、配合本法第十七條條文之修正，酌作文字修正。二、第二項未修正。
+> 釋：一、本條刪除。二、鑒於現行法規政策以鬆綁及自治為原則，考量特定事業如仍須規定發起人應認足股份數額之一定限度者，得於各目的事業主管機關之相關法令規範·本條爰予刪除。
 
 * 28.1 股票未在證券交易所上市或未於證券商營業處所買賣之公開發行股票公司，其股權分散未達主管機關依第二十二條之一第一項所定標準者，於現金發行新股時，除主管機關認為無須或不適宜對外公開發行者外，應提撥發行新股總額之一定比率，對外公開發行，不受公司法第二百六十七條第三項關於原股東儘先分認規定之限制。股票已在證券交易所上市或於證券商營業處所買賣之公開發行股票公司，於現金發行新股時，主管機關得規定提撥發行新股總額之一定比率，以時價向外公開發行，不受公司法第二百六十七條第三項關於原股東儘先分認規定之限制。前二項提撥比率定為發行新股總額之百分之十。但股東會另有較高比率之決議者，從其決議。依第一項或第二項規定提撥向外公開發行時，同次發行由公司員工承購或原有股東認購之價格，應與向外公開發行之價格相同。
 
@@ -126,9 +156,9 @@
 
 > 釋：一、本條新增。二、第一項參考美、英、日、德等國立法例，明定股票上市、上櫃之公司得經董事會決議買回其股份之情事，其股份之買回不受公司法第一百六十七條第一項規定之限制。三、為避免公司買回自己股份之數量及所運用之資金，漫無限制將損及債權人與股東權益，爰增訂第二項。四、為防範公司買回自己股份時發生內線交易或操縱股價，基於管理之需要，增訂第三項。五、公司買回之股份除其為轉讓予員工部分，規定半年內必須處理外，依其他目的買回之部分，則可由公司視市場狀況出售，惟仍不宜無限期持有，故訂定庫藏期限最高為三年，訂定第四項。六、第五項明定公司買回之股份，於未轉讓前不得享有股東權利。七、為避免公司之關係企業或董事、監察人及經理人等藉機於公司買回自己股份之期間賣出所持有該公司之股份，爰訂定第六項。八、於第七項明定董事會決議買回股份及執行情形應提股東會報告。
 
-* 28.3 募集、發行認股權憑證、附認股權特別股或附認股權公司債之公開發行公司，於認股權人依公司所定認股辦法行使認股權時，有核給股份之義務，不受公司法第一百五十六條第六項價格應歸一律與第二百六十七條第一項、第二項及第三項員工、原股東儘先分認規定之限制。前項依公司所定認股辦法之可認購股份數額，應先於公司章程中載明，不受公司法第二百七十八條第一項及第二項規定之限制。
+* 28.3 募集、發行認股權憑證、附認股權特別股或附認股權公司債之公開發行公司，於認股權人依公司所定認股辦法行使認股權時，有核給股份之義務，不受公司法第一百五十六條第七項價格應歸一律與第二百六十七條第一項、第二項及第三項員工、原股東儘先分認規定之限制。前項依公司所定認股辦法之可認購股份數額，應先於公司章程中載明，不受公司法第二百七十八條第一項及第二項規定之限制。
 
-> 釋：一、本條新增。二、為促使證券商品種類多樣化，擴大證券市場規模，使公司有較多籌措資金管道，及投資人有更多之投資工具，爰於第一項明定公開發行公司可募集、發行認股權憑證、附認股權特別股、附認股權公司債等證券商品。三、為順利推動此類商品，提高公司發行意願及投資人投資興趣，宜採可隨時認購之方式，且為免窒礙難行，參酌公司法中有關可轉換股份數額之規定，爰增訂第二項。
+> 釋：一、公司法第一百五十六條第六項於九十年十一月十二日已修正認第七項，第一項爰配合修正。二、第二項未修正。
 
 * 28.4 已依本法發行股票之公司，募集與發行有擔保公司債、轉換公司債或附認股權公司債，其發行總額，除經主管機關徵詢目的事業中央主管機關同意者外，不得逾全部資產減去全部負債餘額之百分之二百，不受公司法第二百四十七條規定之限制。
 
@@ -218,13 +248,13 @@
 
 > 釋：一、本條新增。二、為避免私募之有價證券透過轉讓以規避公開招募程序之適用，爰參酌美國私募制度，訂定私募有價證券得再轉讓之條件；又為使投資人瞭解私募有價證券轉讓之限制，爰訂定資訊揭露之規範。
 
-* 44 證券商須經主管機關之許可及發給許可證照，方得營業；非證券商不得經營證券業務。證券商分支機構之設立，應經主管機關許可。外國證券商在中華民國境內設立分支機構，應經主管機關許可及發給許可證照。證券商設置標準及管理規則，由主管機關定之。
+* 44 證券商須經主管機關之許可及發給許可證照，方得營業；非證券商不得經營證券業務。證券商分支機構之設立，應經主管機關許可。外國證券商在中華民國境內設立分支機構，應經主管機關許可及發給許可證照。證券商及其分支機構之設立條件、經營業務種類、申請程序、應檢附書件等事項之設置標準與其財務、業務及其他應遵行事項之規則，由主管機關定之。前項規則有關外匯業務經營之規定，主管機關於訂定或修正時，應洽商中央銀行意見。
 
-> 釋：一、第一項、第二項未修正。二、第三項新增。為吸取外國證券商經營經驗，提升我國證券商服務水準，暨拓寬我國企業吸取外資管道，改善資本結構，促使證券國際化，增訂第三項，容許外國證券商於我國境內設立分支機構。三、第四項新增。對於證券商之管理、監督，除已見諸於本法各有關規定外，尚待規範之事項頗多，為便於對證券商之統一管理，爰增訂第四項規定，授權主管機關訂定管理規則，俾利於對證券商之管理。
+> 釋：一、第一項至第三項未修正。二、為符合法律授權明確性原則，修正第四項，規定證券商及其分支機構設立條件、經營業務種類、申請程序、應檢附書件之設置標準及其財務、業務與其他應遵行事項之管理規則，由主管機關定之。三、依中央銀行法第三十五條第一項第二款及第二項之規定，中央銀行得指定銀行以外之事業辦理外匯業務，並督導之，各該事業申請辦理外匯業務應具備之條件、業務範圍及其他應遵行事項之辦法，由中央銀行定之，故主管機關依第四項訂定或修正相關規則，於證券商涉及外匯業務經營應遵行事項之規定，應洽商中央銀行意見，爰增訂第五項規定。
 
-* 45 證券商應依第十六條之規定，分別依其種類經營證券業務，不得經營其本身以外之業務。但經主管機關核准者，得兼營他種證券業務或與其有關之業務。證券商不得由他業兼營。但金融機構得經主管機關之許可，兼營證券業務。證券商不得投資於其他證券商。但兼營證券業務之金融機構，報經財政部核准者，不在此限。華僑及外國人投資證券商者，應經主管機關核准。
+* 45 證券商應依第十六條規定，分別依其種類經營證券業務，不得經營其本身以外之業務。但經主管機關核准者，不在此限。證券商不得由他業兼營。但金融機構得經主管機關之許可，兼營證券業務。證券商非經主管機關核准，不得投資於其他證券商。
 
-> 釋：一、配合證券市場發展及健全證券交易市場，證券商之功能亟須加強，宜實施綜合證券商制，取消其營業限制，俾提高對投資大眾之服務品質，爰修正第一項，刪除「除依第一百零一條規定外」等之文字。二、第二項未修正。三、第三項原立法意旨，係在避免證券商間相互投資操縱，壟斷市場。但對於金融機構兼營之證券商，兼營證券業務僅其業務之一部分，且非其事業之主要業務，當不致發生操縱壟斷市場流弊之可能，爰參照銀行法第三十五條之一增列但書。四、第四項新增。為提升證券商服務水準，將來可視實際情形開放國際間聲譽卓著之華僑及外國人投資於證券商參予經營，爰增訂第四項。
+> 釋：一、隨著經濟環境之變遷，證券商大型化並逐步發展為投資銀行，漸成為潮流，爰修正第一項，增加證券商未來業務兼營之彈性，以符合實際需要。二、第二項未修正。三、由於興櫃股票市場之建置，公開發行公司向財團法人中華民國證券櫃檯買賣中心申請其股票登錄認櫃檯買賣後，其股票交易之一方，必須為該股票之推薦證券商，該推薦證券商為發揮造市功能，並須持有一定部位，為符合興櫃股票市場交易性質，爰將第三項修正為證券商非經主管機關核准，不得投資於其他證券商。四、為配合世界貿易組織有關國民待遇之精神，且華僑及外國人已得依據「華僑及外國人投資證券管理辦法」相關規定投資我國有價證券，第四項限制已無必要。爰予刪除。
 
 * 46 證券商依前條第一項但書之規定，兼營證券自營商及證券經紀商者，應於每次買賣時，以書面文件區別其為自行買賣或代客買賣。
 
@@ -236,9 +266,9 @@
 
 * 50 證券商之公司名稱，應標明證券之字樣。但依第四十五條第二項但書之規定為證券商者，不在此限。非證券商不得使用類似證券商之名稱。
 
-* 51 證券商之董事、監察人或經理人不得投資於其他證券商，或兼為其他證券商或公開發行公司之董事、監察人或經理人。但兼營證券業務之金融機構，因投資關係，其董事、監察人或經理人，得兼為其他證券商或公開發行公司之董事、監察人或經理人。
+* 51 證券商之董事、監察人及經理人，不得兼任其他證券商之任何職務。但因投資關係，並經主管機關核准者，得兼任被投資證券商之董事或監察人。
 
-> 釋：一、為使證券商之董事、監察人、經理人，能專心致力於證券事業，提高證券商之信譽，避免上開人員因投資於發行公司而兼任重要職務，予人操作股票之不佳風評，對其兼職之限制，增列包括公開發行公司之董事、監察人或經理人。二、增列但書，排除兼營證券之金融機構，如因投資關係，對證券商之董事、監察人或經理人不得兼為其他證券商或公開發行公司之董事、監察人或經理人限制。
+> 釋：一、經營證券商須經許可，彼此間人員之兼任較一般企業恐產生較多之弊端，除對於因投資關係，並經主管機關核准者，得兼任被投資證券商之董事或監察人外，均不得兼任其他證券商之任何職務，並配合將原但書規定予以刪除。二、對於證券商之董事、監察人、經理人因兼任公開發行公司等之職務所可能發生利益衝突之問題，除回歸公司法相關規定處理外，未來亦將於證券商管理規則及證券商負責人與業務人員管理規則中予以規範。三、考量現行相關管理規定中，對證券商內部人買賣有價證券已有控管機制，而證券商之股票亦係有價證券之一種，不宜例外排除，故對其不得投資於其他證券商之規定予以刪除。
 
 * 52 （刪除）
 
@@ -248,9 +278,9 @@
 
 > 釋：依第四款、第六款規定受處分者未滿五年，均不得充任證券商之董事、監察人或經理人，影響當事人權益至鉅，且有剝奪工作權過苛之嫌，爰將此二款之年限修正為「未滿三年者」，以昭法治與人權之衡平旨意。
 
-* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應年滿二十歲，且具備有關法令所規定之資格條件，並無左列各款情事之一者：一、受破產之宣告尚未復權者。二、兼任其他證券商之職務者。三、（刪除）。四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢、緩刑期滿或赦免後未滿三年者。五、有前條第二款至第四款及第六款之情事者。六、違反主管機關依照本法所發布之命令者。前項業務人員之職稱，由主管機關定之。
+* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應年滿二十歲，並具備有關法令所規定之資格條件，且無下列各款情事之一：一、受破產之宣告尚未復權。二、兼任其他證券商之職務。但因投資關係，並經主管機關核准兼任被投資證券商之董事或監察人者，不在此限。三、（刪除）四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢、緩刑期滿或赦免後未滿三年。五、有前條第二款至第四款或第六款情事之一。六、違反主管機關依本法所發布之命令。前項業務人員之職稱，由主管機關定之。
 
-> 釋：一、本法第四十五條及第五十一條對證券商及其董事、監察人、經理人投資於其他證券商，設有禁止規定，旨在規範證券商間相互投資，避免其藉資金之結合而有操縱、壟斷市場之虞。但證券商雇用之業務人員並非證券商所有權與經營權之實際主體，若亦禁止其投資其他證券商，恐有矯枉過正之嫌，爰刪除第一項第三款之規定。另將「應為有行為能力之中華民國國民」修正為「應年滿二十歲」。二、第二項刪除「以命令」三字，係為配合其他法令用語作文字修正。
+> 釋：一、鑒於本法第五十一條已修正證券商之董事、監察人、經理人，因投資關係並經主管機關核准者，得兼任被投資證券商之董事或監察人，故本條第一項第二款爰配合放寬，對於有價證券營業行為直接有關之業務人員，因投資關係，並經主管機關核准者，得兼任被投資證券商之董事或監察人。另酌作文字修正。二、第二項未修正。
 
 * 55 證券商於辦理公司設立登記後，應依主管機關規定，提存營業保證金。因證券商特許業務所生債務之債權人，對於前項營業保證金，有優先受清償之權。
 
@@ -264,9 +294,9 @@
 
 * 59 證券商自受領證券業務特許證照，或其分支機構經許可並登記後，於三個月內未開始營業，或雖已開業而自行停止營業連續三個月以上時，主管機關得撤銷其特許或許可。前項所定期限，如有正當事由，證券商得申請主管機關核准延展之。
 
-* 60 證券商不得收受存款、辦理放款、借貸有價證券及為借貸款項或有價證券之代理或居間。但經主管機關核准者，得為左列之行為：一、有價證券買賣之融資或融券。二、有價證券買賣融資融券之代理。證券商辦理有價證券買賣融資融券之管理辦法，由財政部擬訂報請行政院核定之。
+* 60 證券商非經主管機關核准，不得為下列之業務：一、有價證券買賣之融資或融券。二、有價證券買賣融資融券之代理。三、有價證券之借貸或為有價證券借貸之代理或居間。四、因證券業務借貸款項或為借貸款項之代理或居間。五、因證券業務受客戶委託保管及運用其款項。證券商依前項規定申請核准辦理有關業務應具備之資格條件、人員、業務及風險管理等事項之辦法，由主管機關定之。
 
-> 釋：（一）為使用語簡明並與財政部證券管理委員會組織條例第二條第一項第十款用語一致，將「有價證券買賣之放款或有價證券之借貸」修正為「有價證券買賣之融資或融券」。（二）將現行第一項各款均納入序文，並增列但書規定。（三）有價證券買賣之融資或融券，第一項已修正證券商經主管機關核准者，亦得為之，則第二項所設有價證券買賣之融資或融券專由證券金融機構為之之規定，自應予以刪除。至於證券金融事業之業務範圍，則於第十八條授權訂定之「證券金融事業管理規則」中規定。（四）參照第十八條對證券金融等事業管理、監督事項之訂定機關，增訂第二項，對證券商辦理有價證券買賣融資融券之管理辦法，由財政部擬訂報請行政院核定之。
+> 釋：一、為使證券商之經營更具彈性，以提升證券商國際競爭力，爰增列第一項證券商經主管機關核准得經營之業務。二、配合第一項增訂證券商得經營之業務範圍，爰修正第二項，規範證券商辦理依前項規定申請核准之業務，其資格條件、人員、業務及風險管理等相關管理辦法，由主管機關定之。
 
 * 61 有價證券買賣融資融券之額度、期限及融資比率、融券保證金成數，由主管機關商經中央銀行同意後定之；有價證券得為融資融券標準，由主管機關定之。
 
@@ -300,7 +330,9 @@
 
 * 72 證券承銷商代銷有價證券，於承銷契約所訂定之承銷期間屆滿後，對於約定代銷之有價證券，未能全數銷售者，其賸餘數額之有價證券，得退還發行人。
 
-* 73 第七十一條及第七十二條之承銷期間，不得少於十日，多於三十日。
+* 73 （刪除）
+
+> 釋：一、本條刪除。二、為使有價證券之承銷作業更具彈性及符合國際實務，俾與國際接軌，刪除本條規定。
 
 * 74 證券承銷商除依第七十一條規定外，於承銷期間內，不得為自己取得所包銷或代銷之有價證券。
 
@@ -310,13 +342,17 @@
 
 > 釋：增加承銷商出售其所包銷有價證券之銷售管道，不再局限於僅能透過流通市場處理，改由主管機關以命令定之，以配合市場狀況。
 
-* 76 證券承銷商承銷契約，應記載左列事項：一、契約當事人之名稱、地址及其負責人之姓名。二、包銷或代銷之標的名稱、數量、金額及發行價格。三、主管機關核准募集、發行或申報生效之年、月、日。四、承銷期間之起訖日期。五、承銷付款日期及方式。六、包銷報酬或代銷手續費之計算及支付日期。七、包銷之方式、包銷時賸餘有價證券之認購方法，或代銷時賸餘有價證券之退還方法。八、其他主管機關所規定事項。證券承銷商共同承銷者，應指定一承銷商為主辦承銷商，其共同契約之內容，除適用前項之規定外，並應訂明主辦承銷商與其他共同承銷商承銷比例及其責任內容。
+* 76 （刪除）
 
-> 釋：一、第一項作文字修正。二、第二項所定之共同承銷，宜區分為主辦承銷商與其他共同承銷商，並於承銷契約訂明承銷比例；所負連帶責任，亦宜由承銷商於承銷契約視承銷內容、比例訂定責任內容；至於共同承銷應於承銷契約表明共同承銷負責人，在第一項第一款已有明定，不無重複，爰修正第二項。
+> 釋：一、本條刪除。二、為使有價證券之承銷作業更具彈性及符合國際實務，俾與國際接軌，刪除本條規定。
 
-* 77 證券承銷商於履行承銷契約開始銷售前，應將承銷契約之副本申報主管機關備查。
+* 77 （刪除）
 
-* 78 證券承銷商於承銷期間屆滿後，應將銷售情形及自己取得之數量，附具清冊，申報主管機關備查。承銷期間屆滿前即結束銷售者，準用前項之規定。
+> 釋：一、本條刪除。二、為使有價證券之承銷作業更具彈性及符合國際實務，俾與國際接軌，刪除本條規定。
+
+* 78 （刪除）
+
+> 釋：一、本條刪除。二、基於主管機關得依本法第六十四條規定要求證券承銷商提供相關資料，為簡化證券商承銷實務作業，爰刪除本條規定。三、配合本條之刪除，為利主管機關得隨時要求證券商提供相關資料，未來將於證券商管理規則中規範證券商應將相關資料留存備查。
 
 * 79 證券承銷商出售其所承銷之有價證券，應依第三十一條第一項之規定，代理發行人交付公開說明書。
 
@@ -354,9 +390,9 @@
 
 * 94 證券交易所之組織，分會員制及公司制。
 
-* 95 證券交易所之設置標準，由主管機關擬訂，報請財政部核定之。每一證券交易所，以開設一個有價證券集中交易市場為限。
+* 95 證券交易所之設置標準，由主管機關定之。每一證券交易所，以開設一個有價證券集中交易市場為限。
 
-> 釋：一、第一項未修正。二、證券交易所是否核准設立，由主管機關及財政部依管理職權決定，當無限制同一地區家數之必要，爰將現行第二項刪除。三、現行第三項移列第二項。
+> 釋：一、配合行政院金融監督管理委員會於九十三年七月一日成立，業依行政院金融監督管理委員會組織法第二條、第四條及行政程序法第十一條第二項將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，並配合刪除「擬訂，報請財政部核」之文字。二、第二項未修正。
 
 * 96 非依本法不得經營類似有價證券集中交易市場之業務；其以場所或設備供給經營者亦同。
 
@@ -496,21 +532,21 @@
 
 * 154 證券交易所得就其證券交易經手費提存賠償準備金，備供前條規定之支付，其攤提方法、攤提比率、停止提存之條件及其保管、運用之方法，由主管機關以命令定之。因有價證券集中交易市場買賣所生之債權，就第一百零八條及第一百三十二條之交割結算基金有優先受償之權，其順序如左：一、證券交易所。二、委託人。三、證券經紀商、證券自營商。交割結算基金不敷清償時，其未受清償部分，得依本法第五十五條第二項之規定受償之。
 
-* 155 對於在證券交易所上市之有價證券，不得有左列各款之行為：一、在集中交易市場報價，業經有人承諾接受而不實際成交或不履行交割，足以影響市場秩序者。二、（刪除）三、意圖抬高或壓低集中交易市場某種有價證券之交易價格，與他人通謀，以約定價格於自己出售，或購買有價證券時，使約定人同時為購買或出售之相對行為者。四、意圖抬高或壓低集中交易市場某種有價證券之交易價格，自行或以他人名義，對該有價證券，連續以高價買入或以低價賣出者。五、意圖影響集中交易市場有價證券交易價格，而散布流言或不實資料者。六、直接或間接從事其他影響集中交易市場某種有價證券交易價格之操縱行為者。前項之規定，於證券商營業處所買賣有價證券準用之。違反前二項規定者，對於善意買入或賣出有價證券之人所受之損害，應負賠償之責。第二十條第四項之規定，於前項準用之。
+* 155 對於在證券交易所上市之有價證券，不得有下列各款之行為：一、在集中交易市場委託買賣或申報買賣，業經成交而不履行交割，足以影響市場秩序。二、（刪除）三、意圖抬高或壓低集中交易市場某種有價證券之交易價格，與他人通謀，以約定價格於自己出售，或購買有價證券時，使約定人同時為購買或出售之相對行為。四、意圖抬高或壓低集中交易市場某種有價證券之交易價格，自行或以他人名義，對該有價證券，連續以高價買入或以低價賣出。五、意圖造成集中交易市場某種有價證券交易活絡之表象，自行或以他人名義，連續委託買賣或申報買賣而相對成交。六、意圖影響集中交易市場有價證券交易價格，而散布流言或不實資料。七、直接或間接從事其他影響集中交易市場有價證券交易價格之操縱行為。前項規定，於證券商營業處所買賣有價證券準用之。違反前二項規定者，對於善意買入或賣出有價證券之人所受之損害，應負賠償責任。第二十條第四項規定，於前項準用之。
 
-> 釋：一、第一項第二款刪除。二、第一項第三款係規範所謂「相對委託」之交易行為，此種行為亦製造市場交易活絡之假象，影響市場行情，實有必要予以禁止；再者，本款與四款「意圖」須與其刻意之炒作行為結合才有構成犯罪之可能；而司法機關審理時，更須詳究其不法意圖之存在，始可認為該當本條之犯罪構成要件，加以定罪論刑，並不至於有浮濫或擴張適用之虞。三、為有效規範市場秩序，保障投資人權益，修正第一項第六款有嚇阻不法之徒利用各種操縱手段或市場弊端不當影響市場行情之功能。
+> 釋：因應市場發生之操縱行為態樣及監理實務需要，增訂不履行交割包括投資人對證券商及證券商對市場不履行交割等兩種態樣，及禁止製造交易活絡表象之行為，以有效遏止市場不法操縱行為。
 
-* 156 主管機關對於已在證券交易所上市之有價證券，發生左列各款情事之一時，得命令停止其一部或全部之買賣，或對證券自營商、證券經紀商之買賣數量加以限制：一、發行該有價證券之公司遇有訴訟事件或非訟事件，其結果足使公司解散或變動其組織、資本、業務計畫、財務狀況或停頓生產，而有影響市場秩序或損害公益之虞者。二、發行該有價證券之公司，遇有重大災害，簽訂重要契約，發生特殊事故，改變業務計畫之重要內容或退票，其結果足使公司之財務狀況有顯著重大之變更，而有影響市場秩序或損害公益之虞者。三、發行該有價證券公司之行為，有虛偽不實或違法情事，足以影響其證券價格，而及於市場秩序或損害公益之虞者。四、該有價證券之市場價格，發生連續暴漲或暴跌情事，並使他種有價證券隨同為非正常之漲跌，而有影響市場秩序或損害公益之虞者。已上市之有價證券，發生前項各款以外之情事，顯足影響市場秩序或損害公益者，主管機關經報請財政部核准後，準用前項之規定辦理。
+* 156 主管機關對於已在證券交易所上市之有價證券，發生下列各款情事之一，而有影響市場秩序或損害公益之虞者，得命令停止其一部或全部之買賣，或對證券自營商、證券經紀商之買賣數量加以限制：一、發行該有價證券之公司遇有訴訟事件或非訟事件，其結果足使公司解散或變動其組織、資本、業務計畫、財務狀況或停頓生產。二、發行該有價證券之公司，遇有重大災害，簽訂重要契約，發生特殊事故，改變業務計畫之重要內容或退票，其結果足使公司之財務狀況有顯著重大之變更。三、發行該有價證券公司之行為，有虛偽不實或違法情事，足以影響其證券價格。四、該有價證券之市場價格，發生連續暴漲或暴跌情事，並使他種有價證券隨同為非正常之漲跌。五、其他重大情事。
 
-> 釋：一、本條第一項將第一、二款所定「業務計劃」修正為「業務計畫」。二、第二項配合證券管理委員會改隸，將「經濟部」修正為「財政部」，並作文字修正。三、發行有價證券之公司其信用之良窳事涉公眾利益，對其退票不應視之為一般公司行號，應作較嚴格之管理，以促使其信用健全，經營基礎穩固，以保障公眾投資之安全。
+> 釋：一、第一項序文酌作文字修正。二、第二項為第一項各款之概括性規定，爰予修正列為第一項第五款規定，以符合立法體例。
 
 * 157 發行股票公司董事、監察人、經理人或持有公司股份超過百分之十之股東，對公司之上市股票，於取得後六個月內再行賣出，或於賣出後六個月內再行買進，因而獲得利益者，公司應請求將其利益歸於公司。發行股票公司董事會或監察人不為公司行使前項請求權時，股東得以三十日之限期，請求董事或監察人行使之；逾期不行使時，請求之股東得為公司行使前項請求權。董事或監察人不行使第一項之請求以致公司受損害時，對公司負連帶賠償之責。第一項之請求權，自獲得利益之日起二年間不行使而消滅。第二十二條之二第三項之規定，於第一項準用之。關於公司發行具有股權性質之其他有價證券，準用本條規定。
 
 > 釋：一、增訂第六項。二、規範公司發行具有股權性質之其他有價證券如可轉換公司債等準用本條，以周嚴有價證券之歸入權行使規範。
 
-* 157.1 左列各款之人，獲悉發行股票公司有重大影響其股票價格之消息時，在該消息未公開前，不得對該公司之上市或在證券商營業處所買賣之股票或其他具有股權性質之有價證券，買入或賣出：一、該公司之董事、監察人及經理人。二、持有該公司股份超過百分之十之股東。三、基於職業或控制關係獲悉消息之人。四、從前三款所列之人獲悉消息者。違反前項規定者，應就消息未公開前其買入或賣出該證券之價格，與消息公開後十個營業日收盤平均價格之差額限度內，對善意從事相反買賣之人負損害賠償責任；其情節重大者，法院得依善意從事相反買賣之人之請求，將責任限額提高至三倍。第一項第四款之人，對於前項損害賠償，應與第一項第一款至第三款提供消息之人，負連帶賠償責任。但第一項第一款至第三款提供消息之人有正當理由相信消息已公開者，不負賠償責任。第一項所稱有重大影響其股票價格之消息，指涉及公司之財務、業務或該證券之市場供求、公開收購，對其股票價格有重大影響，或對正當投資人之投資決定有重要影響之消息。第二十二條之二第三項之規定，於第一項第一款、第二款準用之；第二十條第四項之規定，於第二項從事相反買賣之人準用之。
+* 157.1 下列各款之人，獲悉發行股票公司有重大影響其股票價格之消息時，在該消息未公開或公開後十二小時內，不得對該公司之上市或在證券商營業處所買賣之股票或其他具有股權性質之有價證券，買入或賣出：一、該公司之董事、監察人、經理人及依公司法第二十七條第一項規定受指定代表行使職務之自然人。二、持有該公司之股份超過百分之十之股東。三、基於職業或控制關係獲悉消息之人。四、喪失前三款身分後，未滿六個月者。五、從前四款所列之人獲悉消息之人。違反前項規定者，對於當日善意從事相反買賣之人買入或賣出該證券之價格，與消息公開後十個營業日收盤平均價格之差額，負損害賠償責任；其情節重大者，法院得依善意從事相反買賣之人之請求，將賠償額提高至三倍；其情節輕微者，法院得減輕賠償金額。第一項第五款之人，對於前項損害賠償，應與第一項第一款至第四款提供消息之人，負連帶賠償責任。但第一項第一款至第四款提供消息之人有正當理由相信消息已公開者，不負賠償責任。第一項所稱有重大影響其股票價格之消息，指涉及公司之財務、業務或該證券之市場供求、公開收購，對其股票價格有重大影響，或對正當投資人之投資決定有重要影響之消息；其範圍及公開方式等相關事項之辦法，由主管機關定之。第二十二條之二第三項規定，於第一項第一款、第二款，準用之；其於身分喪失後未滿六個月者，亦同。第二十條第四項規定，於第二項從事相反買賣之人準用之。
 
-> 釋：一、鑑於第七條將招募之標的修正為有價證券，且實務上公司內部人等於重大消息未公開前，買賣可轉換公司債等具有股權性質之有價證券均可能構成內線交易，修正第一項，將股票以外具有股權性質之有價證券納入本條規範，並保留彈性以因應新種有價證券不斷推陳出新。二、配合第一項之修正，將第二項民事損害賠償責任額度計算之標的修正為「該證券」。三、按公開收購以高於市價之價格、向不特定人提出收購要約，對於該個股之價格及正當投資人之投資決定具有重大之影響力，爰於第四項明定。
+> 釋：為加強防制內線交易不法，對內線交易其「內部人範圍」、「公開之方式」、「公開期限」、「重大消息」等要件之定義，及對民事賠償之計算方式予以更明確規範，爰加以修正之。
 
 * 158 證券經紀商接受於有價證券集中交易市場為買賣之受託契約，應依證券交易所所訂受託契約準則訂定之。前項受託契約準則之主要內容，由主管機關以命令定之。
 
@@ -544,9 +580,9 @@
 
 > 釋：照黨團協商條文通過。
 
-* 172 證券交易所及證券投資信託事業之董事、監察人或受僱人，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
+* 172 證券交易所之董事、監察人或受僱人，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
-> 釋：罰金刑修正為以新臺幣為單位。另由於違反本法之犯罪者，往往多屬於嚴重之經濟犯罪，參照過去執行案例實務，低額罰金顯不足以收嚇阻之效，故參酌銀行法提高罰金刑之幅度，將最高刑度提高。
+> 釋：一、配合證券投資信託及顧問法業於九十三年十一月一日施行，依據該法第一百二十一條規定，自施行之日起，證券交易法第十八條所定證券投資信託事業及證券投資顧問事業之規定，及第十八條之二與第十八條之三規定，不再適用，爰刪除第一項「證券投資信託事業」等字。二、第二項、第三項未修正。
 
 * 173 對於前條人員關於違背職務之行為，行求期約或交付不正利益者，處三年以下有期徒刑、拘役或科或併科新臺幣一百八十萬元以下罰金。犯前項之罪而自首者，得免除其刑。
 
@@ -572,13 +608,15 @@
 
 > 釋：罰鍰處分修正為以新臺幣為單位；並為確實達行政罰鍰效果，斟酌將罰鍰額度提高。
 
-* 178 有下列情事之一者，處新臺幣十二萬元以上二百四十萬元以下罰鍰：一、違反第十四條之一第一項、第三項、第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。五、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所規定之事項者。六、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所規定之事項者。有前項第二款至第四款規定之情事，經主管機關處罰鍰，並責令限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次連續各處新臺幣二十四萬元以上四百八十萬元以下罰鍰，至辦理為止。
+* 178 有下列情事之一者，處新臺幣二十四萬元以上二百四十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十六條之一、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條或第一百五十二條規定。二、違反第十四條第三項、第十四條之一第一項、第三項、第十四條之二第一項、第五項、第十四條之三、第十四條之四第一項、第二項、第十四條之五第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之三第一項、第七項、第三十六條第四項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十九條或第一百五十九條規定。三、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條第一項所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕、妨礙或規避。四、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條第一項所定之事業，於依本法或主管機關基於本法所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存。五、違反主管機關依第二十五條之一所定規則有關徵求人、受託代理人與代為處理徵求事務者之資格條件、委託書徵求與取得之方式及對於主管機關要求提供之資料拒絕提供之規定。六、違反主管機關依第二十六條第二項所定公開發行公司董事、監察人股權成數及查核實施規則有關股權成數、通知及查核之規定。七、違反第二十六條之三第八項規定未訂定議事規範或違反主管機關依同條項所定辦法有關主要議事內容、作業程序、議事錄應載明事項及公告之規定，或違反主管機關依第三十六條之一所定準則有關取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證及揭露財務預測資訊等重大財務業務行為之適用範圍、作業程序、應公告及申報之規定。八、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所定辦法有關買回股份之程序、價格、數量、方式、轉讓方法及應申報公告事項之規定。九、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所定辦法有關收購有價證券之範圍、條件、期間、關係人及申報公告事項之規定。有前項第二款至第七款規定情事之一，主管機關除依前項規定處罰鍰外，並應令其限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次各處新臺幣四十八萬元以上四百八十萬元以下罰鍰，至辦理為止。檢舉違反第二十五條之一案件因而查獲者，應予獎勵，其辦法由主管機關定之。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、配合第十四條、第二十五條之一修正，及第十四條之二至第十四條之五、第二十六條之三等規定之增訂，爰修正第一項。二、原條文第二項配合第一項之款次變更，酌作文字修正。三、增訂第三項。檢舉違反第二十五條之一案件因而查獲者，應予獎勵，其辦法由主管機關定之。
 
 * 179 法人違反本法之規定者，依本章各條之規定處罰其為行為之負責人。
 
-* 180 本法所定之罰鍰拒不繳納者，移送法院強制執行。
+* 180 （刪除）
+
+> 釋：一、本條刪除。二、行政執行業務應回歸行政執行法辦理，爰予刪除本條文。
 
 * 180.1 犯本章之罪所科罰金達新臺幣五千萬元以上而無力完納者，易服勞役期間為二年以下，其折算標準以罰金總額與二年之日數比例折算；所科罰金達新臺幣一億元以上而無力完納者，易服勞役期間為三年以下，其折算標準以罰金總額與三年之日數比例折算。
 
@@ -586,15 +624,19 @@
 
 * 181 本法施行前已依證券商管理辦法公開發行之公司股票或公司債券，視同依本法公開發行。
 
+* 181.2 經主管機關依第十四條之二第一項但書規定要求設置獨立董事及依第十四條之四第一項但書規定命令設置審計委員會，或第二十六條之三施行時依同條第六項規定董事、監察人應當然解任者，得自現任董事或監察人任期屆滿時，始適用之。
+
+> 釋：一、本條新增。二、考量修正條文第十四條之二至第十四條之五、第二十六條之三，係自中華民國九十六年一月一日開始施行，為免公司適用之疑義，且考量董事、監察人之任期及緩衝問題，爰明定公司依規定設置獨立董事、審計委員會，或依第二十六條之三第六項規定有董事、監察人應解任之事由，得自現任董事或監察人任期屆滿時，始適用之。
+
 * 182 （刪除）
 
 > 釋：本法自五十七年四月三十日公布施行，本條所定補正期間早已屆滿已無保留之必要，爰予刪除。
 
-* 182.1 本法施行細則，由財政部定之。
+* 182.1 本法施行細則，由主管機關定之。
 
-> 釋：一、本條新增。二、為補充本法之不足及避免掛漏，有訂定施行細則之必要。
+> 釋：配合行政院金融監督管理委員會於九十三年七月一日成立，業依行政院金融監督管理委員會組織法第二條、第四條及行政程序法第十一條第二項將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，爰修正本條文。
 
-* 183 本法自公布日施行。本法修正條文第五十四條、第九十五條及第一百二十八條施行日期，由行政院定之。
+* 183 本法施行日期，除中華民國八十九年七月十九日修正公布之第五十四條、第九十五條及第一百二十八條，自九十年一月十五日施行；中華民國九十四年十二月二十日修正之第十四條之二至第十四條之五、第二十六條之三，自九十六年一月一日施行外，自公布日施行。
 
-> 釋：一、第一項未修正。二、為配合我國加入世界貿易組織之生效日期，本次修正條文之施行日期由行政院定之，爰增訂第二項。
+> 釋：由於第十四條之二至第十四條之五有關獨立董事及審計委員會之設置，涉及公司組織架構之調整，第二十六條之三規範董事最低席次及董事、監察人間應超過一定比例或人數其彼此間不得具有親屬等關係，為避免新制度對公司現行運作造成重大衝擊，宜有適當之緩衝期間，爰修正本條，明定相關修正條文之實施日期。
 
