法院組織法 2006.1.13

--- a/司法-司法組織/法院組織法.md
+++ b/司法-司法組織/法院組織法.md
@@ -22,9 +22,9 @@
 
 > 釋：條文本文不修正，修正附表書記官及通譯之職稱。
 
-* 12 地方法院置法官，薦任第八職等至第九職等或簡任第十職等至第十一職等。司法院得調候補法官至地方法院辦事，承實任法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。地方法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。候補法官調地方法院辦事期間，計入其候補法官年資。具律師執業資格者經聘用充任法官助理期間，計入其律師執業年資。
+* 12 地方法院置法官，薦任第八職等至第九職等或簡任第十職等至第十一職等；試署法官，薦任第七職等至第九職等；候補法官，薦任第六職等至第八職等。實任法官繼續服務十年以上，成績優良，經審查合格者，得晉敘至簡任第十二職等至第十三職等；繼續服務十五年以上，成績優良，經審查合格者，得晉敘至簡任第十二職等至第十四職等。前項簡任第十四職等法官員額，不得逾地方法院實任法官總額三分之一。第二項晉敘法官之資格、審查委員會之組成、審查程序及限制不得申請晉敘情形等事項之審查辦法，由司法院定之。司法院因應地方法院業務需要，得調候補法官至地方法院辦事，承法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。地方法院於必要時，得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。候補法官調地方法院辦事期間，計入其候補法官年資。具律師執業資格者，經聘用充任法官助理期間，計入其律師執業年資。法官助理之遴聘、訓練、業務、管理及考核等相關事項，由司法院以命令定之。
 
-> 釋：一、第一項不修正。二、為提高裁判品質、增進司法效能、並減輕地方法院實任法官工作負荷，有設助理之必要，乃明文規定地方法院置法官助理及其業務範圍、資格。法官助理之工作與律師所執行之業務，均屬司法實務工作，故明定具律師執業資格者充任法官助理期間計入其律師執業年資。
+> 釋：照黨團協商條文通過。
 
 * 13 地方法院置院長一人，由法官兼任，簡任第十職等至第十二職等，綜理全院行政事務，但直轄市地方法院兼任院長之法官，簡任第十一職等至第十三職等。
 
@@ -142,21 +142,31 @@
 
 * 59 各級法院及分院檢察署置檢察官，最高法院檢察署以一人為檢察總長，其他法院及分院檢察署各以一人為檢察長，分別綜理各該署行政事務。各級法院及分院檢察署檢察官員額在六人以上者，得分組辦事，每組以一人為主任檢察官，監督各該組事務。
 
+* 59.1 法務部設檢察官人事審議委員會，審議高等法院檢察署以下各級法院及其分院檢察署主任檢察官、檢察官之任免、轉任、遷調、考核及獎懲事項。前項審議之決議，應報請法務部部長核定後公告之。法務部部長遴任檢察長前，檢察官人事審議委員會應提出職缺二倍人選，由法務部部長圈選之。檢察長之遷調應送檢察官人事審議委員會徵詢意見。檢察官人事審議委員會置委員十七人，由法務部部長指派代表四人、檢察總長及其指派之代表三人與全體檢察官所選出之代表九人組成之，由法務部部長指派具司法官身分之次長為主任委員。前項選任委員之任期，均為一年，連選得連任一次。全體檢察官代表，以全國為單一選區，以秘密、無記名及單記直接選舉產生，每一檢察署以一名代表為限。檢察官人事審議委員會之組成方式、審議對象、程序、決議方式及相關事項之審議規則，由法務部徵詢檢察官人事審議委員會後定之。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
+
 * 60 檢察官之職權如左：一、實施偵查、提起公訴、實行公訴、協助自訴、擔當自訴及指揮刑事裁判之執行。二、其他法令所定職務之執行。
 
 * 61 檢察官對於法院，獨立行使職權。
 
-* 62 檢察官於其所屬檢察署配置之法院管轄區域內執行職務。但遇有緊急情形時，不在此限。
+* 62 檢察官於其所屬檢察署管轄區域內執行職務。但遇有緊急情形或法律另有規定者，不在此限。
+
+> 釋：照黨團協商條文通過。
 
 * 63 檢察總長依本法及其他法律之規定，指揮監督該署檢察官及高等法院以下各級法院及分院檢察署檢察官。檢察長依本法及其他法律之規定，指揮監督該署檢察官及其所屬檢察署檢察官。檢察官應服從前二項指揮監督長官之命令。
+
+* 63.1 最高法院檢察署設特別偵查組，職司下列案件：一、涉及總統、副總統、五院院長、部會首長或上將階級軍職人員之貪瀆案件。二、選務機關、政黨或候選人於總統、副總統或立法委員選舉時，涉嫌全國性舞弊事件或妨害選舉之案件。三、特殊重大貪瀆、經濟犯罪、危害社會秩序，經最高法院檢察署檢察總長指定之案件。特別偵查組置檢察官六人以上，十五人以下，由最高法院檢察署檢察總長指定一人為主任，該組之檢察官、檢察事務官及其他人員，由最高法院檢察署檢察總長自各級法院檢察署中調最高法院檢察署辦事。特別偵查組為辦案需要，得借調相關機關之專業人員協助偵查。特別偵查組檢察官執行職務時，得執行各該審級檢察官之職權，不受第六十二條之限制。調辦事之檢察官行使職權，不受第六十六條之一之限制。立法院得於第一項第一款、第二款之案件偵查終結後，決議要求最高法院檢察署檢察總長赴立法院報告。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
 
 * 64 檢察總長、檢察長得親自處理其所指揮監督之檢察官之事務，並得將該事務移轉於其所指揮監督之其他檢察官處理之。
 
 * 65 高等法院及地方法院檢察署檢察長，得派本署檢察官兼行其分院檢察署檢察官之職務。
 
-* 66 最高法院檢察署檢察總長，特任；主任檢察官，簡任第十四職等；檢察官，簡任第十三職等至第十四職等。高等法院檢察署檢察長，簡任第十三職等至第十四職等；其分院檢察署檢察長，簡任第十二職等至第十四職等。高等法院及分院檢察署主任檢察官，簡任第十一職等至第十三職等；檢察官，簡任第十職等至第十一職等或薦任第九職等；繼續服務二年以上者，得晉敘至簡任第十二職等至第十四職等。地方法院及分院檢察署檢察長，簡任第十職等至第十二職等；主任檢察官，簡任第十職等至第十一職等或薦任第九職等；檢察官，薦任第八職等至第九職等或簡任第十職等至第十一職等。但直轄市地方法院檢察署檢察長，簡任第十一職等至第十三職等。曾任高等法院或其分院檢察署檢察官二年以上，調地方法院或其分院檢察署檢察長、主任檢察官、檢察官者，得晉敘至簡任第十二職等至第十四職等。第二項、第四項之規定，溯自中華民國九十年元月十九日生效。
+* 66 最高法院檢察署檢察總長，特任；主任檢察官，簡任第十四職等；檢察官，簡任第十三職等至第十四職等。高等法院檢察署檢察長，簡任第十三職等至第十四職等；其分院檢察署檢察長，簡任第十二職等至第十四職等。高等法院及分院檢察署主任檢察官，簡任第十一職等至第十三職等；檢察官，簡任第十職等至第十一職等或薦任第九職等；繼續服務二年以上者，得晉敘至簡任第十二職等至第十四職等。地方法院及分院檢察署檢察長，簡任第十職等至第十二職等；主任檢察官，簡任第十職等至第十一職等或薦任第九職等；檢察官，薦任第八職等至第九職等或簡任第十職等至第十一職等；試署檢察官，薦任第七職等至第九職等；候補檢察官，薦任第六職等至第八職等。但直轄市地方法院檢察署檢察長，簡任第十一職等至第十三職等。曾任高等法院或其分院檢察署檢察官二年以上，調地方法院或其分院檢察署檢察長、主任檢察官、檢察官者，得晉敘至簡任第十二職等至第十四職等。第二項、第四項之規定，溯自中華民國九十年一月十九日生效。第十二條第二項至第四項於地方法院及分院檢察署主任檢察官、檢察官準用之；其審查辦法由法務部定之。最高法院檢察署檢察總長由總統提名，經立法院同意任命之，任期四年，不得連任。總統應於前項規定生效後一個月內，向立法院提出最高法院檢察署檢察總長人選。最高法院檢察署檢察總長除年度預算案及法律案外，無須至立法院列席備詢。最高法院檢察署檢察總長因故出缺或無法視事時，總統應於三個月內重新提出人選，經立法院同意任命之，其任期重行計算四年，不得連任。最高法院檢察署檢察總長於任命時具司法官身分者，於卸任時，得回任司法官。最高法院檢察署檢察總長於任滿前一個月，總統應依第七項規定辦理。
 
-> 釋：為配合日後刑事訴訟制度將建構以第一審為堅實之事實審、第二審為事後審之「金字塔型刑事訴訟制度」，讓富有第二審辦案經驗之法官能樂回任於第一審法官或兼庭長，以充實第一審審判之陣容。爰修正本條第二項、第四項，以縮短檢察官在二審檢察署之職期，用以鼓勵二審檢察官回任一審檢察官或主任檢察官，以改善一審檢察體質。
+> 釋：照黨團協商條文通過。
 
 * 66.1 法務部得調高等法院以下各級法院及其分院檢察署檢察官或候補檢察官至最高法院檢察署辦事，承檢察官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集及書類之草擬等事項。法務部得調地方法院及其分院檢察署試署檢察官或候補檢察官至高等法院或其分院檢察署辦事，承檢察官之命，協助檢察官辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集及書類之草擬等事項。法務部得調候補檢察官至地方法院或其分院檢察署辦事，承實任檢察官之命，協助檢察官辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集及書類之草擬等事項。檢察官、試署檢察官或候補檢察官依前三項規定調辦事期間，計入其檢察官、試署檢察官或候補檢察官年資。
 
