公職人員選舉罷免法 2006.1.13

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -160,9 +160,9 @@
 
 > 釋：將原「生活習慣特殊國民」改為「山胞」。
 
-* 42 第三十九條第一款至第三款、第四十一條第一款、第二款之省（市）議員選舉區，由中央選舉委員會劃分之；第三十九條第四款及第四十一條第二款之縣（市）議員選舉區，由省選舉委員會劃分之；第三十九條第四款及第四十一條第二款之鄉（鎮、市）民代表選舉區，由縣選舉委員會劃分之；並應於發布選舉公告時公告。但選舉區有變更時，應於公職人員任期或規定之日期屆滿一年前發布之。前項選舉區，應斟酌行政區域、人口分布、地理環境、交通狀況及應選出名額劃分之。
+* 42 第三十九條第一款至第三款、第四十一條第一款、第二款之省（市）議員選舉區，由中央選舉委員會劃分之；第三十九條第四款及第四十一條第二款之縣（市）議員選舉區，由省選舉委員會劃分之；第三十九條第四款及第四十一條第二款之鄉（鎮、市）民代表選舉區，由縣選舉委員會劃分之；並應於發布選舉公告時公告。但選舉區有變更時，應於公職人員任期或規定之日期屆滿一年前發布之。前項選舉區，應斟酌行政區域、人口分布、地理環境、交通狀況、歷史淵源及應選出名額劃分之。第一項立法委員選舉區之變更，中央選舉委員會應於立法委員任期屆滿一年八個月前，將選舉區變更案送經立法院同意後發布。立法院對於前項選舉區變更案，應以直轄市、縣（市）為單位行使同意或否決。如經否決，中央選舉委員會應就否決之直轄市、縣（市），參照立法院各黨團意見，修正選舉區變更案，並於否決之日起三十日內，重行提出。立法院應於立法委員任期屆滿一年一個月前，對選舉區變更案完成同意，未能於期限內完成同意部分，由行政、立法兩院院長協商解決之。
 
-> 釋：一、第三十九條第四款規定鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得在其行政區域內劃分選舉區。係屬縣選舉委員會辦理事項，本條第一項增列「第三十九條第四款及」等字，以資明確。二、將現行法第一項內「六個月」修正為「一年」。
+> 釋：照黨團協商條文通過。
 
 * 43 選舉委員會應依左列規定期間發布各種公告：一、選舉公告，須載明選舉種類、名額、選舉區之劃分、投票日期及投票起、止時間。並應於公職人員任期或規定之日期屆滿四十日前發布之。但重行選舉、重行投票或補選之公告日期不在此限。二、候選人登記，應於投票日二十日前公告，其登記期間不得少於五日。但鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉不得少於三日。三、選舉人名冊，應於投票日十五日前公告，其公告期間不得少於五日。四、候選人名單，應於競選活動開始前一日公告。五、選舉人人數，應於投票日三日前公告。六、當選人名單，應於投票日後七日內公告。前項第一款之名額，其依人口數計算者，以選舉投票之月前第六個月月終戶籍統計之人口數為準。第一項第二款候選人登記期間截止後，如有選舉區無人登記時，得就無人登記之選舉區，公告辦理第二次候選人登記，其登記期間，不得少於二日。
 
@@ -319,6 +319,10 @@
 * 68.1 中央公職人員，於就職後因死亡、辭職或其他事由出缺時，依左列規定辦理：一、區域、山胞選出者，同一選舉區內缺額達二分之一時，應由中央選舉委員會定期補選。但其所遺任期不足一年時，不予補選。二、全國不分區、僑居國外國民選出者，其所遺缺額，由該政黨登記之候選人名單按順位依序遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。全國不分區、僑居國外國民選出之中央公職人員，在就職後喪失其所屬政黨黨籍者，自喪失黨籍之日起，喪失其中央公職人員資格，由中央選舉委員會函請國民大會或立法院予以註銷。其所遺缺額，由該政黨登記之候選人名單按順位依次遞補；如該政黨登記之候選人名單無人遞補時，視同缺額。第一項第一款所定之補選，應自死亡之日、辭職之日或選舉委員會收到法院判決書之日起三個月內完成投票；第一項第二款、前項所定之遞補，應自國民大會或立法院註銷名籍公函送達之日起十五日內，由中央選舉委員會公告遞補名單。第二項政黨黨籍之喪失，應由所屬政黨檢附黨籍喪失證明書，向中央選舉委員會備案。第一項第二款及第二項遞補之規定，於第二屆國民大會代表及第二屆立法委員適用之。
 
 > 釋：一、憲法增修條文業將「山胞」修正為「原住民」，惟基於本次修正係配合行政程序法第一百七十四條之一規定，單純就涉及人民權利義務事項，提昇為法律位階，為期相關條文一致，本條有關「山胞」應修正為「原住民」部分，暫不修正。二、第二項配合第三項之增列酌作修正，以資明確。三、增列第三項，將本法施行細則第七十八條第二項、第七十八條之一第四項有關辦理補選及遞補期限相關規定移列至本條規定。四、原條文第三項、第四項項次配合調整為第四項、第五項。
+
+* 68.2 當選人經判決當選無效確定，依法院確定判決認定之事實，候選人得票數有變動致影響當選或落選時，主管選舉委員會應依法院確定判決認定之事實，重行審定。審定結果，有不應當選而已公告當選之情形，應予撤銷；有應當選而未予公告之情形，應重行公告，不適用重行選舉或缺額補選之規定。地方民意代表當選人因第一百零三條第一項第三款或第四款之情事，經法院判決當選無效確定者或當選人有褫奪公權尚未復權之情形時，其缺額由落選人依得票數之高低順序遞補，不適用重行選舉或缺額補選之規定。但遞補人員之得票數不得低於選舉委員會原公告該選舉區得票數最低之當選人得票數二分之一。
+
+> 釋：一、本條新增。二、照黨團協商條文通過。
 
 * 69 公職人員之罷免，得由原選舉區選舉人向選舉委員會提出罷免案。但就職未滿一年者，不得罷免。全國不分區、僑居國外國民選舉之當選人，不適用罷免之規定。
 
