--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -946,9 +946,9 @@
 
 * 266 公司依第一百五十六條第二項分次發行新股，或依第二百七十八條第二項發行增資後之新股，均依本節之規定。公司發行新股時，應由董事會以董事三分之二以上之出席，及出席董事過半數同意之決議行之。第一百四十一條、第一百四十二條之規定，於發行新股準用之。
 
-* 267 公司發行新股時，除經目的事業中央主管機關專案核定者外，應保留發行新股總數百分之十至十五之股份由公司員工承購。公營事業經該公營事業之主管機關專案核定者，得保留發行新股由員工承購；其保留股份，不得超過發行新股總數百分之十。公司發行新股時，除依前二項保留者外，應公告及通知原有股東，按照原有股份比例儘先分認，並聲明逾期不認購者，喪失其權利；原有股東持有股份按比例不足分認一新股者，得合併共同認購或歸併一人認購；原有股東未認購者，得公開發行或洽由特定人認購。前三項新股認購權利，除保留由員工承購者外，得與原有股份分離而獨立轉讓。第一項、第二項所定保留員工承購股份之規定，於以公積或資產增值抵充，核發新股予原有股東者，不適用之。公司對員工依第一項、第二項承購之股份，得限制在一定期間內不得轉讓。但其期間最長不得超過二年。本條規定，對因合併他公司、分割或依第一百六十七條之二、第二百六十二條、第二百六十八條之一第一項而增發新股者，不適用之。公司負責人違反第一項規定者，各處新臺幣二萬元以上十萬元以下罰鍰。
+* 267 公司發行新股時，除經目的事業中央主管機關專案核定者外，應保留發行新股總數百分之十至十五之股份由公司員工承購。公營事業經該公營事業之主管機關專案核定者，得保留發行新股由員工承購；其保留股份，不得超過發行新股總數百分之十。公司發行新股時，除依前二項保留者外，應公告及通知原有股東，按照原有股份比例儘先分認，並聲明逾期不認購者，喪失其權利；原有股東持有股份按比例不足分認一新股者，得合併共同認購或歸併一人認購；原有股東未認購者，得公開發行或洽由特定人認購。前三項新股認購權利，除保留由員工承購者外，得與原有股份分離而獨立轉讓。第一項、第二項所定保留員工承購股份之規定，於以公積或資產增值抵充，核發新股予原有股東者，不適用之。公司對員工依第一項、第二項承購之股份，得限制在一定期間內不得轉讓。但其期間最長不得超過二年。本條規定，對因合併他公司、分割、公司重整或依第一百六十七條之二、第二百六十二條、第二百六十八條之一第一項而增發新股者，不適用之。公司負責人違反第一項規定者，各處新臺幣二萬元以上十萬元以下罰鍰。
 
-> 釋：一、為求統一法律用語，第一項及第二項酌作文字修正。二、第五項及第六項酌作文字修正。三、配合公司分割、第一百六十七條之二公司員工認股權憑證之增訂、第二百六十二條公司債得轉換股份或附認股權之修正及第二百六十八條之一第一項公司發行認股權憑證或附認股權特別股之增訂，均無員工、股東認股情形，爰修正第七項。四、開放員工承購股份，有凝聚向心力作用，故而限制持有期間若限制期間過長，將使員工因長期股市之低迷而造成投資損失。權衡利弊建議酌予縮短修正持有期間最長不得超過二年，修正第六項，並將第六、七項合併為第六項。五、修正第八項，罰鍰數額酌作調整，並將罰鍰比例修正為一比五，移列為第七項。
+> 釋：一、修正第七項。二、增列公司依重整計畫發行新股時，也可以排除員工及原有股東的優先承購權。因此，未來其要法院裁定准予公司重整，而重整公司關係人會議通過重整計畫發行新股，重整人即可依計畫內容逕行尋求認購者，無需再費時探詢公司員工及原有股東是否優先承購，藉以彰顯社會正義，同時也提高債權人及投資者的投資意願，俾利重整程序的進行。
 
 * 268 公司發行新股時，除由原有股東及員工全部認足或由特定人協議認購而不公開發行者外，應將左列事項，申請證券管理機關核准，公開發行：一、公司名稱。二、原定股份總數、已發行數額及金額。三、發行新股總數、每股金額及其他發行條件。四、證券管理機關規定之財務報表。五、增資計畫。六、發行特別股者，其種類、股數、每股金額及第一百五十七條各款事項。七、發行認股權憑證或附認股權特別股者，其可認購股份數額及其認股辦法。八、代收股款之銀行或郵局名稱及地址。九、有承銷或代銷機構者，其名稱及約定事項。十、發行新股決議之議事錄。十一、證券管理機關規定之其他事項。公司就前項各款事項有變更時，應即向證券管理機關申請更正；公司負責人不為申請更正者，由證券管理機關各處新臺幣一萬元以上五萬元以下罰鍰。第一項第二款至第四款及第六款，由會計師查核簽證；第八款、第九款，由律師查核簽證。第一項、第二項規定，對於第二百六十七條第五項之發行新股，不適用之。前項發行新股之股數、認股權憑證或附認股權特別股可認購股份數額加計已發行股份總數、已發行轉換公司債可轉換股份總數、已發行附認股權公司債可認購股份總數、已發行附認股權特別股可認購股份總數及已發行認股權憑證可認購股份總數，如超過公司章程所定股份總數時，應先完成變更章程增加資本額後，始得為之。
 
@@ -1038,19 +1038,21 @@
 
 > 釋：一、本條刪除。二、原條文第一款、第二款、第四款至第六款已移至第二百八十三條之一，第三款及第七款已列入第二百八十五條之一第三項，爰刪除本條。
 
-* 289 法院為重整裁定時，應就對公司業務，具有專門學識及經營經驗者或金融機構，選任為重整監督人，並決定左列事項：一、債權及股東權之申報期間及場所，其期間應在裁定之日起十日以上，三十日以下。二、所申報之債權及股東權之審查期日及場所，其期日應在前款申報期間屆滿後十日以內。三、第一次關係人會議期日及場所，其期日應在第一款申報期間屆滿後三十日以內。前項重整監督人，應受法院監督，並得由法院隨時改選。
+* 289 法院為重整裁定時，應就對公司業務，具有專門學識及經營經驗者或金融機構，選任為重整監督人，並決定下列事項：一、債權及股東權之申報期日及場所，其期間應在裁定之日起十日以上，三十日以下。二、所申報之債權及股東權之審查期日及場所，其期間應在前款申報期間屆滿後十日以內。三、第一次關係人會議期日及場所，其期日應在第一款申報期間屆滿後三十日以內。前項重整監督人，應受法院監督，並得由法院隨時改選。重整監督人有數人時，關於重整事務之監督執行，以其過半數之同意行之。
 
-> 釋：重整人必須於第一項關係人會議中，提出關於公司業務與財務狀況及公司重整計畫，為使重整人有較寬裕時間製作重整計畫，修正延長為「三十」日。
+> 釋：一、增訂第三項。二、明定重整監督人有數人時，關於重整事務監督執行，以其過半數的同意行之，以杜絕爭議。
 
-* 290 公司重整人由法院就債權人、股東、董事、目的事業中央主管機關或證券管理機關推薦之專家中選派之。關係人會議，依第三百零二條分組行使表決權之結果，有二組以上主張另行選定重整人時，得提出候選人名單，聲請法院選派之。重整人有數人時，關於重整事務之執行，以其過半數之同意行之。重整人執行職務應受重整監督人之監督，其有違法或不當情事者，重整監督人得聲請法院解除其職務，另行選派之。重整人為左列行為時，應於事前徵得重整監督人之許可：一、營業行為以外之公司財產之處分。二、公司業務或經營方法之變更。三、借款。四、重要或長期性契約之訂立或解除，其範圍由重整監督人定之。五、訴訟或仲裁之進行。六、公司權利之拋棄或讓與。七、他人行使取回權、解除權或抵銷權事件之處理。八、公司重要人事之任免。九、其他經法院限制之行為。
+* 290 公司重整人由法院就債權人、股東、董事、目的事業中央主管機關或證券管理機關推薦之專家中選派之。第三十條之規定，於前項公司重整人準用之。關係人會議，依第三百零二條分組行使表決權之結果，有二組以上主張另行選定重整人時，得提出候選人名單，聲請法院選派之。重整人有數人時，關於重整事務之執行，以其過半數之同意行之。重整人執行職務應受重整監督人之監督，其有違法或不當情事者，重整監督人得聲請法院解除其職務，另行選派之。重整人為下列行為時，應於事前徵得重整監督人之許可：一、營業行為以外之公司財產之處分。二、公司業務或經營方法之變更。三、借款。四、重要或長期性契約之訂立或解除，其範圍由重整監督人定之。五、訴訟或仲裁之進行。六、公司權利之拋棄或讓與。七、他人行使取回權、解除權或抵銷權事件之處理。八、公司重要人事之任免。九、其他經法院限制之行為。
 
-> 釋：一、為顧及債權人、股東或董事，對公司原有之業務或債權情形較為熟悉，不宜將之硬性排除在外，且是否有偏頗之虞，法院亦會適當斟酌，故亦保留債權人、股東或董事亦得擔任公司重整人之規定，爰修正第一項。二、第二項至第四項未修正。三、第五項酌作文字修正。
+> 釋：公司重整人涉及股東、債權人、公司原本經營者三方面之權益，事關日後重整成敗，除專業外，當有操守原則之適用，爰增列第二項，規範其消極資格。
 
 * 291 法院為重整裁定後，應即公告左列事項：一、重整裁定之主文及其年、月、日。二、重整監督人、重整人之姓名或名稱、住址或處所。三、第二百八十九條第一項所定期間、期日及場所。四、公司債權人及持有無記名股票之股東怠於申報權利時，其法律效果。法院對於重整監督人、重整人、公司、已知之公司債權人及股東，仍應將前項裁定及所列各事項，以書面送達之。法院於前項裁定送達公司時，應派書記官於公司帳簿，記明截止意旨，簽名或蓋章，並作成節略，載明帳簿狀況。
 
 > 釋：一、重整人之姓名或名稱、住址或處所，有必要在法院公告准許重整之裁定中出現，爰修正第一項第二款。二、依民法第三條，簽名與蓋章具同等效力，爰修正第三項「簽名蓋章」為「簽名或蓋章」，以資簡化。
 
-* 292 法院為重整裁定後，應檢同裁定書，通知主管機關，為重整開始之登記。
+* 292 法院為重整裁定後，應檢同裁定書，通知主管機關，為重整開始之登記，並由公司將裁定書影本黏貼於該公司所在地公告處。
+
+> 釋：責成公司黏貼法院准予裁定全文於該重整公司所在地，以彌補公告之不足。
 
 * 293 重整裁定送達公司後，公司業務之經營及財產之管理處分權移屬於重整人，由重整監督人監督交接，並聲報法院，公司股東會、董事及監察人之職權，應予停止。前項交接時，公司董事及經理人，應將有關公司業務及財務之一切帳冊、文件與公司之一切財產，移交重整人。公司之董事、監察人、經理人或其他職員，對於重整監督人或重整人所為關於業務或財務狀況之詢問，有答覆之義務。公司之董事、監察人、經理人或其他職員，有左列行為之一者，各處一年以下有期徒刑、拘役或科或併科新臺幣六萬元以下罰金：一、拒絕移交。二、隱匿或毀損有關公司業務或財務狀況之帳冊文件。三、隱匿或毀棄公司財產或為其他不利於債權人之處分。四、無故對前項詢問不為答覆。五、捏造債務或承認不真實之債務。
 
@@ -1078,7 +1080,9 @@
 
 * 301 關係人會議之任務如左：一、聽取關於公司業務與財務狀況之報告及對於公司重整之意見。二、審議及表決重整計劃。三、決議其他有關重整之事項。
 
-* 302 關係人會議，應分別按第二百九十八條第一項規定之權利人，分組行使其表決權，其決議以經各組表決權總額二分之一以上之同意行之。但對於重整計畫之可決，應經各組表決權總額三分之二以上之同意行之。公司無資本淨值時，股東組不得行使表決權。
+* 302 關係人會議，應分別按第二百九十八條第一項規定之權利人，分組行使其表決權，其決議以經各組表決權總額二分之一以上之同意行之。公司無資本淨值時，股東組不得行使表決權。
+
+> 釋：修正第一項。將第一項後段文字「但對於重整計畫之表決，應經各組表決權總額三分之二以上之同意行之。」刪除。
 
 * 303 重整人應擬訂重整計畫，連同公司業務及財務報表，提請第一次關係人會議審查。重整人經依第二百九十條之規定另選者，重整計畫，應由新任重整人於一個月內提出之。
 
@@ -1090,9 +1094,9 @@
 
 > 釋：臺灣省政府功能業務與組織調整後，在臺灣省部分由經濟部辦理，在直轄市部分由直轄市政府辦理，爰刪除第一項之「中央」二字。
 
-* 306 重整計畫未得關係人會議有表決權各組之可決時，重整監督人應即報告法院，法院得依公正合理之原則，指示變更方針，命關係人會議在一個月內再予審查。前項重整計畫，經指示變更再予審查，仍未獲關係人會議可決時，應裁定終止重整。但公司確有重整之價值者，法院就其不同意之組，得以左列方法之一，修正重整計畫裁定認可之：一、有擔保重整債權人之擔保財產，隨同債權移轉於重整後之公司，其權利仍存續不變。二、有擔保重整債權人，對於擔保之財產，無擔保重整債權人，對於可充清償其債權之財產；股東對於可充分派之賸餘財產；均得分別依公正交易價額，各按應得之份，處分清償或分派承受或提存之。三、其他有利於公司業務維持及債權人權利保障之公正合理方法。前條第一項或前項重整計畫，因情事變遷或有正當理由致不能或無須執行時，法院得因重整監督人、重整人或關係人之聲請，以裁定命關係人會議重行審查，其顯無重整之可能或必要者，得裁定終止重整。前項重行審查可決之重整計畫，仍應聲請法院裁定認可。
+* 306 重整計畫未得關係人會議有表決權各組之可決時，重整監督人應即報告法院，法院得依公正合理之原則，指示變更方針，命關係人會議在一個月內再予審查。前項重整計畫，經指示變更再予審查，仍未獲關係人會議可決時，應裁定終止重整。但公司確有重整之價值者，法院就其不同意之組，得以下列方法之一，修正重整計畫裁定認可之：一、有擔保重整債權人之擔保財產，隨同債權移轉於重整後之公司，其權利仍存續不變。二、有擔保重整債權人，對於擔保之財產；無擔保重整債權人，對於可充清償其債權之財產；股東對於可充分派之賸餘財產；均得分別依公正交易價額，各按應得之份，處分清償或分派承受或提存之。三、其他有利於公司業務維持及債權人權利保障之公正合理方法。前條第一項或前項重整計畫，因情事變遷或有正當理由致不能或無須執行時，法院得因重整監督人、重整人或關係人之聲請，以裁定命關係人會議重行審查，其顯無重整之可能或必要者，得裁定終止重整。前項重行審查可決之重整計畫，仍應聲請法院裁定認可。關係人會議，未能於重整裁定送達公司後一年內可決重整計畫者，法院得依聲請或依職權裁定終止重整；其經法院依第三項裁定命重行審查，而未能於裁定送達後一年內可決重整計畫者，亦同。
 
-> 釋：於第一項末句中之「再予審查」之上，增加「在一個月內」四字。
+> 釋：一、增訂第五項。二、促使關係人早日作出具體可行的重整計畫，避免公司重整狀態久懸不決，法律關係長久處於不確定狀態，損害當事人的權益。
 
 * 307 法院為前二條處理時，應徵詢主管機關、目的事業中央主管機關及證券管理機關之意見。法院為終止重整之裁定，應檢同裁定書通知主管機關；裁定確定時，主管機關應即為終止重整之登記；其合於破產規定者，法院得依職權宣告其破產。
 
