--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -980,11 +980,13 @@
 
 > 釋：一、增訂第一項。二、原第一項移列為第二項。犯強盜罪而故意使人受重傷者，亦屬惡行重大，且懲治盜匪條例第二條第一項第六款原有處罰規定，配合懲治盜匪條例之廢止，爰於第二項增列「使人受重傷者」。
 
-* 333 未受交戰國之允准或不屬於各國之海軍，而駕駛船艦，意圖施強暴、脅迫於他船或他船之人或物者，為海盜罪，處死刑、無期徒刑或七年以上有期徒刑。船員或乘客意圖掠奪財物，施強暴、脅迫於其他船員或乘客，而駕駛或指揮船艦者，以海盜論。因而致人於死者，處死刑；致重傷者，處死刑或無期徒刑。
+* 333 未受交戰國之允准或不屬於各國之海軍，而駕駛船艦，意圖施強暴、脅迫於他船或他船之人或物者，為海盜罪，處死刑、無期徒刑或七年以上有期徒刑。船員或乘客意圖掠奪財物，施強暴、脅迫於其他船員或乘客，而駕駛或指揮船艦者，以海盜論。因而致人於死者，處死刑、無期徒刑或十二年以上有期徒刑；致重傷者，處死刑、無期徒刑或十年以上有期徒刑。
 
-* 334 犯海盜罪而有左列行為之一者，處死刑：一、放火者。二、強制性交者。三、擄人勒贖者。四、故意殺人者。
+> 釋：一、原條文第三項前段對於犯海盜罪而有致人於死之結果，其法定刑為唯一死刑，第三百三十四條海盜結合罪亦為唯一死刑，有違反罪刑均衡原則，為配合第三百三十四條法定刑之修正，而通盤檢討本條及第三百三十四條之法定刑，使海盜加重結果罪及海盜結合罪之處罰，有其合理之差距，以符罪刑均衡原則。二、修正條文第三百三十四條第一項犯海盜罪而故意殺人之法定刑因已檢討修正為死刑或無期徒刑，為符罪刑均衡原則，爰將本條第三項可罰性較低之海盜致人於死罪之法定刑配合修正為死刑、無期徒刑或十二年以上有期徒刑，海盜致重傷罪之法定刑修正為死刑、無期徒刑或十年以上有期徒刑。
 
-> 釋：原條文第二款「強姦」修改為「強制性交」。
+* 334 犯海盜罪而故意殺人者，處死刑或無期徒刑。犯海盜罪而有下列行為之一，處死刑、無期徒刑或十二年以上有期徒刑：一、放火者。二、強制性交者。三、擄人勒贖者。四、使人受重傷者。
+
+> 釋：一、九十一年一月三十日因懲治盜匪條例之廢止，而配套修正之中華民國刑法部分條文，就結合犯之規範，因其犯罪行為輕重不同，而歸納區分為二類：一為故意殺人；另一則為放火、強制性交、擄人勒贖及使人受重傷等行為，而規範不同刑責，本條亦援引上開體例，將海盜罪之結合犯行為區分為二類，將原條文修正為二項，並於第二項中配合增列使人受重傷之類型，以期體例一致。二、第二項新增。將原條文修正為二項，第一項犯海盜罪而故意殺人之法定刑已由唯一死刑修正為死刑或無期徒刑，則第二項之放火、強制性交、擄人勒贖及使人受重傷等結合行為之法定刑亦應一併修正為死刑、無期徒刑或十二年以上有期徒刑，以資相應。
 
 * 334.1 第三百二十三條之規定，於本章之罪準用之。
 
